[gd_scene load_steps=10 format=3 uid="uid://cvpv1k60walif"]

[ext_resource type="Script" uid="uid://8njq7ek36s61" path="res://statusbar.gd" id="1_ckw0e"]
[ext_resource type="Texture2D" uid="uid://bbjls1riuuawi" path="res://sprites/UI/shielf.png" id="1_to5nr"]
[ext_resource type="Texture2D" uid="uid://rocwn2hm7e34" path="res://sprites/UI/mask_damage.png" id="3_to5nr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ckw0e"]
atlas = ExtResource("3_to5nr")
region = Rect2(12, 0, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjh6e"]
atlas = ExtResource("3_to5nr")
region = Rect2(24, 0, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe6kd"]
atlas = ExtResource("3_to5nr")
region = Rect2(36, 0, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_jojmg"]
atlas = ExtResource("3_to5nr")
region = Rect2(48, 0, 12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_s764v"]
atlas = ExtResource("3_to5nr")
region = Rect2(0, 0, 12, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_u7qpu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckw0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjh6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe6kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jojmg")
}],
"loop": false,
"name": &"damage",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s764v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckw0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjh6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe6kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jojmg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jojmg")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s764v")
}],
"loop": true,
"name": &"healthy",
"speed": 5.0
}]

[node name="StatusBar" type="CanvasLayer"]
script = ExtResource("1_ckw0e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 72.0
offset_bottom = 64.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(3, 10)
scale = Vector2(2, 2)
texture = ExtResource("1_to5nr")

[node name="mask1" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(34, 9)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u7qpu")
animation = &"healthy"

[node name="mask2" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(58, 9)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u7qpu")
animation = &"healthy"

[node name="mask3" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(82, 9)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u7qpu")
animation = &"healthy"

[node name="mask4" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(106, 9)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u7qpu")
animation = &"healthy"
